- Fixed: Alignment for findbar pseudo background between compact enabled or disabled - Fixed: Sidebar alignment and height

--- a/NeoZen/Features/BetterFindbar/BetterFindbar-Background.css
+++ b/NeoZen/Features/BetterFindbar/BetterFindbar-Background.css
@@ -11,6 +11,7 @@
         opacity: 0;
         margin-top: 0px !important;
         margin-bottom: 0px !important;
+        margin-right: var(--zen-element-separation);
         height: 95px !important;
         top: auto !important;
         bottom: -9%;
@@ -18,6 +19,13 @@
         border-radius: var(--Neo-Border-Radius) !important;
         visibility: visible !important;
         transition: opacity 0.8s ease, bottom 0.6s ease !important;
+    }
+}
+@media (-moz-pref("zen.view.compact.hide-tabbar")) {
+    :root[zen-compact-mode="true"]{
+        #zen-appcontent-wrapper::before {
+            margin-right: 0px !important;
+        }
     }
 }
 
