--- a/NeoZen/Theme/Sidebar/Compact/Sidebar-Alignment.css
+++ b/NeoZen/Theme/Sidebar/Compact/Sidebar-Alignment.css
@@ -1,34 +1,53 @@
 /* Fixes height alignment for compact mode - collapsed - multiple toolbar - only hidden tab bar */
 
-
 @media not (-moz-pref("zen.view.compact.hide-toolbar")) {
+  @media (-moz-pref("zen.view.compact.hide-tabbar")) {
+    /* Height adjustment when toolbar is not hidden */
+    :root:not([zen-single-toolbar="true"]):not([zen-sidebar-expanded="true"]) body:has([zen-compact-mode="true"]) #titlebar {
+      height: calc(100% - (var(--zen-element-separation) * 1.2))  !important;
+      max-height: unset !important;
+      top: calc(var(--zen-element-separation) * 2) !important;
+    }
+  }
+}
+
+/* Fixes height alignment for compact mode - collapsed - multiple toolbar - hide both */
+
+@media (-moz-pref("zen.view.compact.hide-toolbar")) {
+  @media (-moz-pref("zen.view.compact.hide-tabbar")) {
   /* Height adjustment when toolbar is not hidden */
-  :root:not([zen-single-toolbar="true"]):not([zen-sidebar-expanded="true"]) body:has([zen-compact-mode="true"]) #titlebar {
-    height: calc(100% - (var(--zen-element-separation) * 1.2))  !important;
-    max-height: unset !important;
-    top: calc(var(--zen-element-separation) * 2) !important;
+    :root:not([zen-single-toolbar="true"]):not([zen-sidebar-expanded="true"]) body:has([zen-compact-mode="true"]) #titlebar {
+      height: calc(100% - (var(--zen-element-separation) * 0.5))  !important;
+      max-height: unset !important;
+      top: calc(var(--zen-element-separation) * 0.5) !important;
+      margin-bottom: 0px !important;
+    }
   }
 }
 
 /* Fixes height alignment for compact mode - expanded - multiple toolbar - only hidden tab bar */
 
 @media not (-moz-pref("zen.view.compact.hide-toolbar")) {
-  /* Height adjustment when toolbar is not hidden */
-  :root:not([zen-single-toolbar="true"])[zen-sidebar-expanded="true"] body:has([zen-compact-mode="true"]) #titlebar {
-    height: calc(100% - (var(--zen-element-separation) * 2.5))  !important;
-    max-height: unset !important;
-    top: calc(var(--zen-element-separation) * 2) !important;
+  @media (-moz-pref("zen.view.compact.hide-tabbar")) {
+    /* Height adjustment when toolbar is not hidden */
+    :root:not([zen-single-toolbar="true"])[zen-sidebar-expanded="true"] body:has([zen-compact-mode="true"]) #titlebar {
+      height: calc(100% - (var(--zen-element-separation) * 2.5))  !important;
+      max-height: unset !important;
+      top: calc(var(--zen-element-separation) * 2) !important;
+    }
   }
 }
 
 /* Fixes height alignment for compact mode - expanded - multiple toolbar - hidden both */
 
 @media (-moz-pref("zen.view.compact.hide-toolbar")) {
-  /* Height adjustment when toolbar is not hidden */
-  :root:not([zen-single-toolbar="true"])[zen-sidebar-expanded="true"] body:has([zen-compact-mode="true"]) #titlebar {
-    height: calc(100% - (var(--zen-element-separation) * 2))  !important;
-    max-height: unset !important;
-    top: calc(var(--zen-element-separation) * 0.5) !important;
+  @media (-moz-pref("zen.view.compact.hide-tabbar")) {
+    /* Height adjustment when toolbar is not hidden */
+    :root:not([zen-single-toolbar="true"])[zen-sidebar-expanded="true"] body:has([zen-compact-mode="true"]) #titlebar {
+      height: calc(100% - (var(--zen-element-separation) * 2))  !important;
+      max-height: unset !important;
+      top: calc(var(--zen-element-separation) * 0.5) !important;
+    }
   }
 }
 
